--- a/Python Fundamentals/Module_3_3_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3_3_Python_Fundamentals.ipynb
@@ -54,11 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL CITIES ['New York', 'Shanghai', 'Munich', 'Toyko', 'Dubai', 'Mexico City', 'São Paulo', 'Hyderabad', 'Reykjavík', 'Moscow', 'Beijing', 'Lamu']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "visited_cities = [\"New York\", \"Shanghai\", \"Munich\", \"Toyko\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
@@ -72,11 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL CITIES\n",
+      "New York\n",
+      "Shanghai\n",
+      "Munich\n",
+      "Toyko\n",
+      "Dubai\n",
+      "Mexico City\n",
+      "São Paulo\n",
+      "Hyderabad\n",
+      "Reykjavík\n",
+      "Moscow\n",
+      "Beijing\n",
+      "Lamu\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "visited_cities = [\"New York\", \"Shanghai\", \"Munich\", \"Toyko\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
@@ -92,11 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team A: [0, 2, 2, 2, 4, 4, 4, 5, 6, 6, 6] \n",
+      "Team B: [0, 0, 0, 1, 1, 2, 3, 3, 3, 6, 8]\n",
+      "Team Totals [0, 2, 2, 2, 4, 4, 4, 5, 6, 6, 6, 0, 0, 0, 1, 1, 2, 3, 3, 3, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "team_a = [0,2,2,2,4,4,4,5,6,6,6]\n",
@@ -110,11 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team_a extended [0, 2, 2, 2, 4, 4, 4, 5, 6, 6, 6, 0, 0, 0, 1, 1, 2, 3, 3, 3, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example after running cell above\n",
     "# .extend() \n",
@@ -138,28 +176,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chicken', 'blue jay', 'crow', 'pigeon', 'penguin', 'hawk', 'falcon', 'robin']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] extend the list common_birds with list birds_seen which you must create\n",
     "common_birds = [\"chicken\", \"blue jay\", \"crow\", \"pigeon\"]\n",
+    "birds_seen = [\"penguin\", \"hawk\", \"falcon\", \"robin\"]\n",
+    "\n",
+    "common_birds.extend(birds_seen)\n",
+    "print (common_birds)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create 2 lists zero_nine and ten_onehundred that contain 1-9, and 10 - 100 by 10's.\n",
     "# [ ] use list addition to concatenate the lists into all_num and print\n",
-    "\n"
+    "zero_nine = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "ten_onehundred = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "all_num = zero_nine + ten_onehundred\n",
+    "print(all_num)\n"
    ]
   },
   {
@@ -190,11 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "regular ['Dubai', 'Mexico City', 'São Paulo', 'Hyderabad']\n",
+      "reversed ['Hyderabad', 'São Paulo', 'Mexico City', 'Dubai']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "cities_1 = [\"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
@@ -206,11 +270,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "regular list [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100] \n",
+      "\n",
+      "reverse list [100, 90, 80, 70, 60, 50, 40, 30, 20, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0] \n",
+      "\n",
+      "Three Multiple\n",
+      "90\n",
+      "60\n",
+      "30\n",
+      "9\n",
+      "6\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "all_num = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
@@ -230,11 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before list [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "after list [20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# create a list of  numbers by casting a range \n",
@@ -260,28 +348,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and  print a list of multiples of 5 from 5 to 100\n",
     "# { ] reverse the list and print\n",
-    "\n"
+    "all_num = list (range(101))\n",
+    "#print (all_num)\n",
+    "fives = []\n",
+    "\n",
+    "for num in all_num:\n",
+    "    if num/5 == int(num/5):\n",
+    "        fives.append(num)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "print (fives)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[44, 40, 36, 32, 28, 24, 20, 16, 12, 8, 4, 4, 8, 12, 16, 20, 24, 28, 32, 36, 40, 44]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create two lists: fours & more_fours containing multiples of four from 4 to 44\n",
     "# [ ] combine and print so that the output is mirrored [44, 40,...8, 4, 4, 8, ...40, 44]\n",
-    "\n"
+    "\n",
+    "fours = []\n",
+    "more_fours = []\n",
+    "\n",
+    "all_num = list(range(4,45))\n",
+    "#print (all_num)\n",
+    "\n",
+    "for num in all_num:\n",
+    "    if num/4 == int(num/4):\n",
+    "        fours.append(num)\n",
+    "        more_fours.append(num)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "more_fours.reverse()\n",
+    "\n",
+    "double_fours = more_fours + fours\n",
+    "print(double_fours)\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -322,11 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quiz_scores: [15, 18, 18, 18, 19, 19, 20, 20, 20, 20, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "quiz_scores = [20, 19, 20, 15, 20, 20, 20, 18, 18, 18, 19]\n",
@@ -339,11 +474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "game_points: [3, 14, 0, 8, 21, 1, 3, 8]\n",
+      "sorted_points: [0, 1, 3, 3, 8, 8, 14, 21]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "game_points = [3, 14, 0, 8, 21, 1, 3, 8]\n",
@@ -357,11 +499,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsorted ['Dubai', 'Mexico City', 'São Paulo', 'Hyderabad']\n",
+      "Sorted ['Dubai', 'Hyderabad', 'Mexico City', 'São Paulo']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "cities_1 = [\"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
@@ -384,24 +533,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['New York', 'Shanghai', 'Munich', 'Toyko', 'Dubai', 'Mexico City', 'São Paulo', 'Hyderabad', 'Qubec']\n",
+      "['Dubai', 'Hyderabad', 'Mexico City', 'Munich', 'New York', 'Qubec', 'Shanghai', 'São Paulo', 'Toyko']\n",
+      "Dubai\n",
+      "Hyderabad\n",
+      "Mexico City\n",
+      "Munich\n",
+      "New York\n",
+      "Qubec\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print cites from visited_cities list in alphbetical order using .sort()\n",
     "# [ ] only print cities that names start \"Q\" or earlier\n",
-    "visited_cities = [\"New York\", \"Shanghai\", \"Munich\", \"Toyko\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
-    "\n"
+    "visited_cities = [\"New York\", \"Shanghai\", \"Munich\", \"Toyko\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\", \"Qubec\"]\n",
+    "print (visited_cities)\n",
+    "visited_cities.sort()\n",
+    "print (visited_cities)\n",
+    "\n",
+    "for city in visited_cities:\n",
+    "    if city[0] <= \"Q\":\n",
+    "        print (city)\n",
+    "    else:\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] make a sorted copy (sorted_cities) of visited_cities list\n",
@@ -437,9 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] build a list (add_animals) using a while loop, stop adding when an empty string is entered\n",
@@ -458,9 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] extend the lists into animals, then sort \n",
@@ -479,9 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] get input if list should be viewed alpha or reverse alpha and display list\n",
@@ -524,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
