--- a/Python Fundamentals/Module_3_4_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3_4_Python_Fundamentals.ipynb
@@ -51,11 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STRING: Notebooks can be exported as .pdf\n",
+      "LIST: ['Notebooks', 'can', 'be', 'exported', 'as', '.pdf'] \n",
+      "\n",
+      "Notebooks\n",
+      "can\n",
+      "be\n",
+      "exported\n",
+      "as\n",
+      ".pdf\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "tip = \"Notebooks can be exported as .pdf\"\n",
@@ -70,11 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "down\n",
+      "falling\n",
+      "is\n",
+      "bridge\n",
+      "London\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "rhyme = \"London bridge is falling down\"\n",
@@ -101,29 +125,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack\n",
+      "and\n",
+      "Jill\n",
+      "went\n",
+      "up\n",
+      "the\n",
+      "hill\n",
+      "To\n",
+      "fetch\n",
+      "a\n",
+      "pail\n",
+      "of\n",
+      "water\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] split the string(rhyme) into a list of words (rhyme_words)\n",
     "# [ ] print each word on it's own line\n",
     "rhyme = 'Jack and Jill went up the hill To fetch a pail of water' \n",
+    "\n",
+    "rhyme_words = rhyme.split()\n",
+    "\n",
+    "for word in rhyme_words:\n",
+    "    print (word)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "spaces\n",
+      "indentation\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] split code_tip into a list and print the first and every other word\n",
     "code_tip = \"Python uses spaces for indentation\"\n",
-    "\n"
+    "\n",
+    "code_list = code_tip.split()\n",
+    "\n",
+    "for word in code_list[0::2]:\n",
+    "    print (word)"
    ]
   },
   {
@@ -152,11 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python', 'uses', 'spaces', 'for', 'indentation']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "code_tip = \"Python-uses-spaces-for-indentation\"\n",
@@ -167,11 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python uses spaces for indentation\n",
+      "['Python uses sp', 'ces for indent', 'tion']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - study the list print output\n",
     "code_tip = \"Python uses spaces for indentation\"\n",
@@ -184,11 +256,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jack and Jill went up the hill', 'To fetch a pail of water', 'Jack fell down and broke his crown', 'And Jill came tumbling after'] \n",
+      "\n",
+      "And Jill came tumbling after\n",
+      "Jack fell down and broke his crown\n",
+      "To fetch a pail of water\n",
+      "Jack and Jill went up the hill\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# triple quotes ''' ''' preserve formatting such as spaces and line breaks\n",
@@ -220,15 +303,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write Code Frequently\n",
+      "Save Code Frequently\n",
+      "Comment Code Frequently\n",
+      "Study Code Frequently\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] split poem into a list of phrases by splitting on \"*\" a\n",
     "# [ ] print each phrase on a new line in title case\n",
-    "poem = \"Write code frequently*Save code frequently*Comment code frequently*Study code frequently*\"\n"
+    "poem = \"Write code frequently*Save code frequently*Comment code frequently*Study code frequently*\"\n",
+    "poem_lines = poem.split('*')\n",
+    "\n",
+    "for line in poem_lines:\n",
+    "    print (line.title())"
    ]
   },
   {
@@ -260,11 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notebooks can be exported as .pdf\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "tip_words = ['Notebooks', 'can', 'be', 'exported', 'as', '.pdf'] \n",
@@ -275,11 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "no_space = \"\"\n",
@@ -289,11 +398,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I-t-e-r-a-t-i-o-n\n",
+      "I t e r a t i o n\n",
+      "I...t...e...r...a...t...i...o...n\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - .join() iterates through sequences\n",
     "dash = \"-\"\n",
@@ -320,15 +437,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A*s*t*e*r*i*s*k\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] .join() letters list objects with an Asterisk: \"*\"\n",
     "letters = [\"A\", \"s\", \"t\", \"e\", \"r\", \"i\", \"s\", \"k\"]\n",
-    "\n"
+    "print (\"*\".join(letters))\n"
    ]
   },
   {
@@ -346,15 +469,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a single character as a delimeter: %\n",
+      "Jack%and%Jill%went%up%the%hill%To%fetch%a%pail%of%water\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete Choose the separator\n",
     "phrase_words = ['Jack', 'and', 'Jill', 'went', 'up', 'the', 'hill', 'To', 'fetch', 'a', 'pail', 'of', 'water']\n",
-    "\n"
+    "\n",
+    "delimeter = input (\"Enter a single character as a delimeter: \")\n",
+    "print (delimeter.join(phrase_words))"
    ]
   },
   {
@@ -387,11 +519,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H', 'e', 'l', 'l', 'o']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "hello_letters = list(\"Hello\")\n",
@@ -400,11 +538,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c~o~n~c~a~t~e~n~a~t~e~s\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# cast sting to list\n",
@@ -417,11 +561,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(\"Hello \", end = '')\n",
@@ -430,11 +580,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "still something to learn about print()\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# This  is the default print end\n",
@@ -444,11 +601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C*o*n*c*a*t*e*n*a*t*i*o*n*"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# end inserts any valid str character: A-z, 0-9,!,@,*,\\n,\\t or ''(empty string)...\n",
@@ -468,15 +631,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI-How are-You?\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use 3 print() statements to output text to one line \n",
     "# [ ] separate the lines by using \"- \" (dash space)\n",
-    "\n"
+    "\n",
+    "print(\"HI\", end='-')\n",
+    "print(\"How are\", end=\"-\")\n",
+    "print(\"You?\")"
    ]
   },
   {
@@ -491,14 +663,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c-r-e-a-t-e-\n",
+      "\n",
+      "a-\n",
+      "\n",
+      "s-t-r-i-n-g-\n",
+      "\n",
+      "(-f-a-c-t-)-\n",
+      "\n",
+      "o-f-\n",
+      "\n",
+      "2-0-\n",
+      "\n",
+      "o-r-\n",
+      "\n",
+      "m-o-r-e-\n",
+      "\n",
+      "c-h-a-r-a-c-t-e-r-s-\n",
+      "\n",
+      "a-n-d-\n",
+      "\n",
+      "c-a-s-t-\n",
+      "\n",
+      "t-o-\n",
+      "\n",
+      "a-\n",
+      "\n",
+      "l-i-s-t-\n",
+      "\n",
+      "(-f-a-c-t-_-l-e-t-t-e-r-s-)-"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a string (fact) of 20 or more characters and cast to a list (fact_letters)\n",
     "# [ ] iterate fact, printing each char on one line, except for spaces print a new line\n",
+    "\n",
+    "fact = \"create a string (fact) of 20 or more characters and cast to a list (fact_letters)\"\n",
+    "fact_letters = list(fact)\n",
+    "for char in fact_letters:\n",
+    "    if char == \" \":\n",
+    "        print (\"\\n\")\n",
+    "    else:\n",
+    "        print (char, end=\"-\")\n",
     "\n"
    ]
   },
@@ -520,15 +734,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1+2+3+4+5+6+7+8+9+10+11+1+1+1+5+6+7+8+9+20 = 124\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create add the digits\n",
+    "digit = \"1 2 3 4 5 6 7 8 9 10 11 1 1 1 5 6 7 8 9 20\"\n",
+    "integers = digit.split(\" \")\n",
+    "total = 0\n",
+    "equation = \"\"\n",
+    "#print (integers)\n",
+    "for num in integers:\n",
+    "#    print (num)\n",
+    "    total += int(num)\n",
+    "    if num == \" \":\n",
+    "        pass\n",
+    "    else:\n",
+    "        equation = \"+\".join(integers)\n",
+    "#        equation = equation.append(num)\n",
+    "    #print (num, end=\"+\")\n",
     "\n",
-    "\n"
+    "print (equation, \"=\", total)\n"
    ]
   },
   {
@@ -558,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
